--- a/frontend/styles/tailwind-input.scss
+++ b/frontend/styles/tailwind-input.scss
@@ -315,6 +315,9 @@
     @apply flex overflow-hidden p-2 m-2;
     .lineItem_img_wrapper {
       @apply w-[100px] min-w-[100px] h-[100px] overflow-hidden;
+      .lineItem_img_main {
+        @apply w-full h-full object-cover;
+      }
     }
     .lineItem_info {
       @apply flex-grow;
